# disa

./: README.md  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/src/: assembler.rs  disassembler.rs  main.rs
src/action/: code.js
src/components/: Ace.vue  CodeDisplay.vue  CodeEditor.vue  Config.vue  Disa.vue  Left.vue  LeftRight.vue  RunButton.vue  TopBottom.vue  XButton.vue
src/data/: config.js  useState.js  useUIState.js
